# cmakepractice

./: CMakeLists.txt
app/: CMakeLists.txt
src/: CMakeLists.txt
